刷题：前两天题目重写

--- a/_posts/算法、刷题/2021-07-07-数组扁平化（一层、全部展开、指定深度）.md
+++ b/_posts/算法、刷题/2021-07-07-数组扁平化（一层、全部展开、指定深度）.md
@@ -22,9 +22,13 @@ typora-root-url: ..
 
 方法总结：
 
--	展开一层：1、`[].concat(...arr)` 2、`[].concat.apply([], arr)`
+- 展开一层：1、『`[].concat(...arr)` 』
 
-- 全部展开：1、falt本身：`arr.flat(Infinity)`
+    2、`[].concat.apply([], arr)/[].concat.call([], ...arr1)` 
+
+    3、`arr.flat()`
+
+- 全部展开：1、flat本身：`arr.flat(Infinity)`
 
     2、toString 将数组全部打平：`arr.toString().split(',')`
 
@@ -48,7 +52,7 @@ typora-root-url: ..
     }
     ```
 
-- 根据指定深度扁平数组
+- 根据指定深度扁平数组 『deep-1』『deep>1』
 
     ```js
     function flattenByDeep(arr, deep = 1) {
