--- a/_posts/算法、刷题/2024-12-5-模拟实现promise.md
+++ b/_posts/算法、刷题/2024-12-5-模拟实现promise.md
@@ -39,17 +39,17 @@ function MyPromise(executor) {
     self.status = Status.pending;
     self.value = null;
     self.reason = null;
-    self.resolvedCallbacks = [];
+    self.resolvedCallbacks = []; // 在 resolve 函数中被执行
     self.rejectedCallbacks = [];
 
-    const resolve = function (value) {
+    function resolve(value) {
         if (self.status === Status.pending) {
             self.status = Status.resolve;
             self.value = value;
-            self.resolvedCallbacks.forEach(it => it(self.value));
+            self.resolvedCallbacks.forEach(it => it(self.value)); // 不用setTimeout，投入该队列的都是 setTimeout 包裹的函数，模拟微任务，在同步任务执行完之后执行
         }
     }
-    const reject = function (reason) {
+    function reject(reason) {
         if (self.status === Status.pending) {
             self.status = Status.reject;
             self.reason = reason;
@@ -66,21 +66,18 @@ function MyPromise(executor) {
 
 // 5
 MyPromise.prototype.then = function (onResolved, onRejected) {
-    // this在实例化的时候指向实例本身
-    const { value, reason, status, resolvedCallbacks, rejectedCallbacks } = this;
-
-    // 兼容 then 的两个参数都是函数
+    // 兼容 then 的两个参数都是函数 - reject-> throw reason
     onResolved = typeof onResolved === 'function' ? onResolved : value => value;
     onRejected = typeof onRejected === 'function' ? onRejected : reason => { throw reason; };
 
     // 链式调用
-    const promise2 = new MyPromise((resolve, reject) => {
+    return new MyPromise((resolve, reject) => {
         // Promise 可以绑定多个 then 方法 
         // -> 状态已改变的promise调用then-立即执行
         // -> 状态未改变的promise调用then-异步执行 - 通过setTimeout来模拟异步调用
         const resolveFake = () => {
             try {
-                const res = onResolved(value);
+                const res = onResolved(this.value); // 不是执行所有回调，而是把当前传入回调函数执行 - 『注意这里要实时更新的value』
                 resolve(res);
             } catch (reason) {
                 reject(reason)
@@ -88,26 +85,25 @@ MyPromise.prototype.then = function (onResolved, onRejected) {
         }
         const rejectFake = () => {
             try {
-                const res = onRejected(reason);
+                const res = onRejected(this.reason);
                 resolve(res);
             } catch (reason) {
                 reject(reason)
             }
         }
-        switch (status) {
+        switch (this.status) {
             case Status.resolve:
-                setTimeout(resolveFake, 0);
+                setTimeout(resolveFake, 0); // 模拟微任务，在同步任务执行完后执行
                 break;
             case Status.reject:
-                setTimeout(rejectFake, 0);
+                setTimeout(rejectFake, 0); // 模拟微任务，在同步任务执行完后执行
                 break;
             case Status.pending:
-                resolvedCallbacks.push(() => setTimeout(resolveFake, 0));
-                rejectedCallbacks.push(() => setTimeout(rejectFake, 0));
+                this.resolvedCallbacks.push(() => setTimeout(resolveFake, 0));
+                this.rejectedCallbacks.push(() => setTimeout(rejectFake, 0));
                 break;
         }
     })
-    return promise2
 }
 
 // 4
@@ -115,49 +111,47 @@ MyPromise.prototype.catch = function (onRejected) {
     return this.then(null, onRejected);
 }
 
-// 6
+// 6 - 『状态是父期约的传递』，返回值被忽略（『onFinally无参数』）
 MyPromise.prototype.finally = function (callback) {
-    return this.then(value => {
-        callback();
-        return value;
-    }, reason => {
-        callback();
-        throw reason;
-    });
+    return this.then(value => {callback(); return value;}, 
+                     reason => {callback(); throw reason;}
+                    );
 }
 
-// 7
-MyPromise.prototype.resolve = function (value) {
-    return new MyPromise((resolve) => resolve(value))
+// 注意：then\catch\finally 定义在 prototype 上，依赖于实例本身的状态，操作单个实例
+// resolve\reject\all\race 不依赖于实例，而是工具方法，作为静态方法定义
+
+// 7 - 返回一个『新的』状态已定的期约
+MyPromise.resolve = function (value) {
+    return new MyPromise((resolve, reject) => {
+        if (value instanceof MyPromise) {
+            // 传入的如果是一个 promise，会把状态和值传递下去
+            value.then(resolve, reject)
+        } else {
+            resolve(value)
+        }
+    })
 }
-MyPromise.prototype.reject = function (reason) {
+MyPromise.reject = function (reason) {
     return new MyPromise((resolve, reject) => reject(reason))
 }
 
-// 8
-MyPromise.prototype.all = function (arr) {
+// 8 - 返回一个 promise，都resolve则返回结果数组；有一个reject，则返回reject原因
+MyPromise.all = function (arr) {
     return new MyPromise((resolve, reject) => {
-        let result = [];
-        let index = 0;
-        for (let i = 0; i < arr.length; i++) {
-            MyPromise.resolve(arr[i]).then(data => {
-                result[i] = data;
-                if (++index === arr.length) {
-                    resolve(result);
-                }
-            }, err => {
-                reject(err);
-                return;
-            });
-        }
+        arr.reduce((pre, cur, index) => {
+            cur.then((res) => {
+                pre.push(res);
+                index + 1 === arr.length && resolve(pre)
+            }, reject);
+            return pre;
+        }, []);
     });
 }
 
 MyPromise.race = function (arr) {
-    return new Promise((resolve, reject) => {
-        for (let i = 0; i < arr.length; i++) {
-            MyPromise.resolve(arr[i]).then(resolve, reject);
-        }
+    return new MyPromise((resolve, reject) => {
+        arr.forEach(it => MyPromise1.resolve(it).then(resolve, reject))
     });
 }
 ```
