刷题：bind+jsonp -> LTN1

--- a/_posts/react17+ts4/2022-10-14-项目初始化和配置.md
+++ b/_posts/react17+ts4/2022-10-14-项目初始化和配置.md
@@ -48,7 +48,9 @@ tsconfig.ts -> baseUrl 可以指定项目中绝对路径
 
 按照指示安装：`npm install --save-dev @commitlint/{config-conventional,cli}`
 
-配置：<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221017094453381.png" alt="image-20221017094453381" style="zoom:67%;" />
+配置：
+
+<img src="/../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20221017094453381.png" alt="image-20221017094453381" style="zoom:67%;" />
 
 [commit 规范](https://github.com/conventional-changelog/commitlint/tree/master/@commitlint/config-conventional)
 
