--- a/_posts/算法、刷题/2024-12-5-模拟实现promise.md
+++ b/_posts/算法、刷题/2024-12-5-模拟实现promise.md
@@ -26,7 +26,19 @@ typora-root-url: ..
 
 常见错误：
 
+- 1、如果不使用 self，在 resolve和reject定义时使用『箭头函数』保存上下文
+
 <img src="/../img/assets_2023/image-20241205201152107.png" alt="image-20241205201152107" style="zoom:50%;" />
+
+<img src="/../img/assets_2023/image-20241207115858868.png" alt="image-20241207115858868" style="zoom:40%;" />
+
+- 2、Promise.resolve - 传入的如果是一个 promise，会把状态和值传递下去
+
+    <img src="/../img/image-20241207115957175.png" alt="image-20241207115957175" style="zoom:30%;" />
+
+- 3、promise 不需要执行
+
+    <img src="/../img/image-20241207120142997.png" alt="image-20241207120142997" style="zoom:35%;" />
 
 ```js
 let Status = {
@@ -35,7 +47,7 @@ let Status = {
     pending: 'pending'
 }
 function MyPromise(executor) {
-    let self = this;
+    let self = this; // 如果不使用 self，在 resolve和reject定义时使用『箭头函数』保存上下文
     self.status = Status.pending;
     self.value = null;
     self.reason = null;
