错题内容补充

--- a/_posts/浏览器原理相关内容/2024-10-24-怎么实现跨域.md
+++ b/_posts/浏览器原理相关内容/2024-10-24-怎么实现跨域.md
@@ -39,7 +39,7 @@ typora-root-url: ..
 - **②JSONP『只支持GET请求』**，JSONP的优势在于支持老式浏览器，以及可以向不支持CORS的网站请求数据
 
 - **③代理服务器**，主要是通过 **同源策略对服务器不加限制**，浏览器和代理服务器同源即可，最简单
-- ④ postMessage ⑤ websocket协议，有一些缺点，但也可用；还有一些通过 iframe 传递的方法，可实现，但不实用，不做记录
+- ④ websocket协议，有一些缺点，但也可用
 
 
 
@@ -86,7 +86,7 @@ app.put('/getData', function(req, res) {
 ```js
 <script>
     function handleData(data) {
-        console.log(data);
+        console.log(data)
     }
 </script>
 <script src="https://example.com/data?callback=handleData"></script>
@@ -128,28 +128,7 @@ module.exports = {
 };
 ```
 
-
-
-##### ④ postMessage - 一个窗口向另一个窗口发送/接收消息
-
-- 缺点：适用于两个窗口之间通信，对于 ajax 请求跨域问题不能直接解决
-
-```javascript
-// 一个页面传递
-const targetWindow = window.open('https://another-example.com/pageB');
-targetWindow.postMessage('Hello from page A!', 'https://another-example.com');
-// 另一个页面接收
-window.addEventListener('message', function(e) {
-    if (event.origin === 'https://example.com') {
-        console.log('Received message:', e.data);
-        // 可以在这里对收到的消息进行处理
-    }
-});
-```
-
-
-
-##### ⑤ websocket协议 - 协议本身并不受同源策略的限制
+##### ④ websocket协议 - 协议本身并不受同源策略的限制
 
 实现方式： **WebSocket 是一种双向通信协议，在建立连接（服务器配置）之后，WebSocket 的 server 与 client 都能主动向对方发送或接收数据**。
 
