--- a/_posts/算法、刷题/2021-07-07-数组扁平化（一层、全部展开、指定深度）.md
+++ b/_posts/算法、刷题/2021-07-07-数组扁平化（一层、全部展开、指定深度）.md
@@ -22,35 +22,29 @@ typora-root-url: ..
 
 方法总结：
 
-- 展开一层：1、『`[].concat(...arr)` 』
+- 展开一层：
 
-    2、`[].concat.apply([], arr)/[].concat.call([], ...arr1)` 
+    1、concat直接传一组参数：『`[].concat(...arr)` 』
 
-    3、`arr.flat()`
+    2、concat通过apply/call传参数：`[].concat.apply([], arr)` / `[].concat.call([], ...arr)`
 
-- 全部展开：1、flat本身：`arr.flat(Infinity)`
+    3、flat：`arr.flat()`
 
-    2、toString 将数组全部打平：`arr.toString().split(',')`
+- 全部展开：
 
-    3、递归：① concat的参数为数组/值：
+    1、flat：`arr.flat(Infinity)`
+
+    2、toString 法：`arr.toString().split(',')`，toString 转成字符串会将数组全部打平
+
+    3、reduce法递归： concat的参数为数组/值：
 
     ```js
     function flatFun(arr){
-        return arr.reduce((pre, cur) => pre.concat(Array.isArray(cur) ? flatFun(cur) : cur))
+        return arr.reduce((pre, cur) => pre.concat(Array.isArray(cur) ? flatFun(cur) : cur), [])
     }
     ```
 
-    ②遍历forEach组装res
-
-    ```js
-    function flatFun(arr) {
-        let res = [];
-        arr.forEach(item => {
-            res = res.concat(Array.isArray(item) ? flatFun(item) : item)
-        });
-        return res;
-    }
-    ```
+    常见 ：遍历forEach组装res - 本质就是 reduce
 
 - 根据指定深度扁平数组 『deep-1』『deep>1』
 
