--- a/_posts/算法、刷题/2024-12-5-模拟实现promise.md
+++ b/_posts/算法、刷题/2024-12-5-模拟实现promise.md
@@ -36,9 +36,19 @@ typora-root-url: ..
 
     <img src="/../img/image-20241207115957175.png" alt="image-20241207115957175" style="zoom:30%;" />
 
-- 3、promise 不需要执行
+- 3、Promise.race() - promise 不需要执行
 
     <img src="/../img/image-20241207120142997.png" alt="image-20241207120142997" style="zoom:35%;" />
+
+    <img src="/../img/assets_2023/image-20241210123040158.png" alt="image-20241210123040158" style="zoom:35%;" />
+
+- 4、Promise.then() - 为了链式调用返回的新的promise的this === 原本的this（箭头函数）
+
+    <img src="/../img/assets_2023/image-20241210122822660.png" alt="image-20241210122822660" style="zoom:35%;" />
+
+- 5、Promise.finally() - 需要将 value 值传递
+
+    <img src="/../img/assets_2023/image-20241210122803383.png" alt="image-20241210122803383" style="zoom:35%;" />
 
 ```js
 let Status = {
@@ -89,7 +99,8 @@ MyPromise.prototype.then = function (onResolved, onRejected) {
         // -> 状态未改变的promise调用then-异步执行 - 通过setTimeout来模拟异步调用
         const resolveFake = () => {
             try {
-                const res = onResolved(this.value); // 不是执行所有回调，而是把当前传入回调函数执行 - 『注意这里要实时更新的value』
+                const res = onResolved(this.value); // 这里的 this 因为 return 时使用箭头函数，this 指向的就是外部的 this
+                // 不是执行所有回调，而是把当前传入回调函数执行 - 『注意这里要实时更新的value』
                 resolve(res);
             } catch (reason) {
                 reject(reason)
