--- a/_posts/算法、刷题/2024-12-7-模拟实现jsonp.md
+++ b/_posts/算法、刷题/2024-12-7-模拟实现jsonp.md
@@ -18,7 +18,13 @@ typora-root-url: ..
 
 常见错误：
 
-- 遗忘在 window 上定义回调函数
+- 1、遗忘在 window 上定义回调函数 - 功能：①使用 data值+②清理script标签
+
+    <img src="/../../30ReactReact/image-20241209213826937.png" alt="image-20241209213826937" style="zoom:30%;" />
+
+- 2、判断是否有 ? 时，一定要注意 indexOf 和 includes
+
+    <img src="/../../30ReactReact/image-20241209213700272.png" alt="image-20241209213700272" style="zoom:30%;" />
 
 ```js
 function jsonp({ url, params, callback }) {
