--- a/_posts/css相关内容/2024-05-07-rem是基于什么原理进行适配的.md
+++ b/_posts/css相关内容/2024-05-07-rem是基于什么原理进行适配的.md
@@ -24,8 +24,8 @@ typora-root-url: ..
 
 #### 🆚 em相对于父元素
 
-1. 『**子元素** `font-size` 』设置`em`单位，是 **相对于父元素** 的的字体大小
-2. 『当前元素的 `width/height/padding/margin` 』设置`em`单位，是相对于 **当前元素** 的字体大小
+1. 『元素** `font-size` 』设置`em`单位，是 **相对于父元素** 的的 font-size
+2. 『元素的 `width/height/padding/margin` 』设置`em`单位，是相对于本身的 font-size
 
 - 补充：chrome 显示的最小字体是12px，低于12px的字体大小会被默认为12px
 
