刷题：防抖、节流

--- a/_posts/算法、刷题/2021-07-11-工作 防抖节流.md
+++ b/_posts/算法、刷题/2021-07-11-工作 防抖节流.md
@@ -8,30 +8,78 @@ header-img:
 catalog: true
 tags:
     - < 算法题 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
 ##  防抖节流
 
-[防抖、节流](https://segmentfault.com/a/1190000016261602) 这个写的很好，平时键盘抬起就会搜索，**防抖后，间隔一段时间不输入才会搜索**，**节流后，可以做到不管是否停止打字，间隔一段时间都会搜索**。
+总结：
 
-还参考了另一篇博文：[JavaScript专题之跟着underscore学防抖](https://github.com/mqyqingfeng/Blog/issues/22)
+​	平时键盘抬起就会搜索，**防抖后，间隔一段时间不输入才会搜索**，**节流后，在频繁触发的事件流中，函数以固定的频率执行**。
 
-- 总结 - 记住例子：
+##### 1、 函数防抖
 
-    **函数防抖** - 类似法师技能读条，还没读完条再按技能，会重新读条
+类似法师技能读条，还没读完条再按技能，会重新读条
 
-    - 防抖的原理就是：你尽管触发事件，但是我一定 **在事件触发 n 秒后才执行**，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就 **以新的事件的时间为准，n 秒后才执行**，总之，就是要等你 **触发完事件 n 秒内不再触发事件，我才执行**，真是任性呐!
+- 防抖的原理就是：触发事件，但是我一定 **在事件触发 n 秒后才执行**，如果你在一个事件触发的 n 秒内又触发了这个事件，那我就 **以新的事件的时间为准，n 秒后才执行**，总之，就是要等你 **触发完事件 n 秒内不再触发事件，我才执行。**
 
-    **函数节流** - 就是 <u>一直按着技能键</u>，也能在规定时间内发技能
+- 实现防抖的 **典型逻辑** 是通过设置一个定时器，<u>每次事件触发时清除之前的定时器</u>，然后重新设置一个新的定时器。只有当最后一次触发后经过了设定的延迟时间，定时器中的函数才会执行。
 
-    - 如果你持续触发事件，每隔一段时间，只执行一次事件
+    ```js
+    function debounce(fn, delay) {
+        let timeId = null;
+        return function (...args) {
+            // 清理定时器，才能保证不停读条-覆盖上一次
+            timeId && clearTimeout(timeId);
+            timeId = setTimeout(() => {
+                fn.apply(this, ...args);
+            }, delay)
+        }
+    }
+    ```
 
-- 防抖 `debounce` - 实际应用场景
-    - `search` 搜索联想，用户在不断输入值时，用防抖来节约请求资源
-    - 浏览器 `resize` 的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+- 常见错误：
+
+    1、记得清理定时器，才能够做到【间隔一段时间不输入才会执行回调
+
+    <img src="/../img/assets_2023/image-20241213222902041.png" alt="image-20241213222902041" style="zoom:25%;" />
+
+##### 2、函数节流
+
+就是 <u>一直按着技能键</u>，也能在规定时间内发技能
+
+- 节流通常是通过一个 **标记变量和定时器** 来实现，当函数执行后，设置一个定时器，在定时器未结束期间（即未达到规定的时间间隔），再次触发事件时函数不会执行，直到定时器结束，标记变量重置，函数才可以再次执行。
+
+    ```js
+    // 不是使用计算时间的方式来判断，而是直接使用 flag标记变量
+    function throttle(fn, delay) {
+        let timer = null;
+        let flag = true;
+        return function (...args) {
+            if (!flag) {
+                return;
+            }
+            fn.apply(this, args);
+            flag = false;
+            timer = setTimeout(() => {
+                flag = true;
+            }, delay);
+        };
+    }
+    ```
+
     
-- 节流 `throttle` - 实际应用场景
+
+##### 3、实际应用场景
+
+- 防抖 `debounce`
+
+    - `search` 搜索联想，用户在不断输入值时，用防抖来节约请求资源
+
+    - 浏览器 `resize` 的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+
+- 节流 `throttle` 
     - 鼠标不断点击触发，`mousedown` (单位时间内只触发一次)
     - 监听滚动事件，比如是否滑到底部自动加载更多，用 `throttle` 来判断
 
@@ -41,41 +89,32 @@ typora-root-url: ..
 
 案例：一段键盘输入就执行函数的代码 - 如图，存在抖动问题
 
-```javascript
-// 只要按下键盘，就会触发这次ajax请求
-let ajax = (content) => {
-    console.log('ajax - ', content);
-}
-let input = document.getElementById('input');
-input.addEventListener('keyup', (e) => {
-    ajax(e.target.value);
-})
-```
-
 <img src="/../img/assets_2019/image-20210710163059697.png" alt="image-20210710163059697" style="zoom:33%;" />
 
 将函数进行防抖处理 - 优化后：
 
 ```javascript
 // 通过防抖函数处理后，只有当你在指定间隔内（1s）没有输入时，才会执行函数
-let ajax = (content) => {
-    console.log('ajax - ', content);
-}
-// 添加防抖处理
-let debounce = (callback, delay) => {
-    return (arguments) => {
-        // 清理定时器这一步十分关键 - 保证以 1s 为周期重新计数
-        clearTimeout(callback.timeId);
-        callback.timeId = setTimeout(() => {
-            callback.call(this, arguments);
+function debounce(fn, delay) {
+    let timeId = null;
+    return function (...args) {
+        if(timeId) {
+            clearTimeout(timeId);
+        }
+        timeId = setTimeout(() => {
+            fn(...args);
         }, delay)
     }
 }
-let debounceAjax = debounce(ajax, 1000);
+
+// 添加防抖处理
+let keyUp = (value) => console.log(value);
+let debounceKeyUp = debounce(keyUp, 1000);
+
 // 给指定 input 添加监听函数
 let input = document.getElementById('input');
 input.addEventListener('keyup', (e) => {
-    debounceAjax(e.target.value);
+    debounceKeyUp(e.target.value);
 })
 ```
 
@@ -86,32 +125,35 @@ input.addEventListener('keyup', (e) => {
 - 如果外部的 `delay` 时间大于 防抖的 `delay` 时间 - **函数最终以外部时间周期执行**：
 
     ```js
-    let Junzhe = function () {
-        console.log('🌹🌹🌹🌹');
-    }
-    
+    let show = function () {console.log(1);}
     // 第一次 3秒，之后每次都是 2秒 执行一次
-    setInterval(debounce(Junzhe, 1000), 2000);
-    
+    setInterval(debounce(show, 1000), 2000);
     // 第一次 4秒，之后每次都是 3秒 执行一次
-    setInterval(debounce(Junzhe, 1000), 3000);
+    setInterval(debounce(show, 1000), 3000);
     ```
+    
+    原因分析如图：
+    
+    <img src="/../img/assets_2019/image-20210710195651390.png" alt="image-20210710195651390" style="zoom:18%;" />
 
-    原因分析如图：<img src="/../img/assets_2019/image-20210710195651390.png" alt="image-20210710195651390" style="zoom:18%;" /><img src="/../img/assets_2019/image-20210710195948437.png" alt="image-20210710195948437" style="zoom:18%;" />
+    <img src="/../img/assets_2019/image-20210710195948437.png" alt="image-20210710195948437" style="zoom:18%;" />
 
-- 如果外部的 `delay` 时间小于 防抖的 `delay` 时间 - `Junzhe` **函数不会执行**：
+- 如果外部的 `delay` 时间小于 防抖的 `delay` 时间 - `show` **函数不会执行**：
 
     ```js
-    setInterval(debounce(Junzhe, 4000), 3000);
+    setInterval(debounce(show, 4000), 3000);
     ```
 
-    原因分析如图：<img src="/../img/assets_2019/image-20210710200524848.png" alt="image-20210710200524848" style="zoom:18%;" />
+    原因分析如图：
+    
+    <img src="/../img/assets_2019/image-20210710200524848.png" alt="image-20210710200524848" style="zoom:18%;" />
 
 规定在一个单位时间内，只能触发一次函数。**如果这个单位时间内触发多次函数，只有一次生效。**
 
-在不断输入时，ajax会按照我们设定的时间，每1s执行一次：
+### 节流
 
 ```javascript
+// 在不断输入时，ajax会按照我们设定的时间，每1s执行一次
 let throttle = (callback, delay) => {
     let last;
     return (arguments) => {
@@ -127,11 +169,25 @@ let throttle = (callback, delay) => {
             last = now;
             callback.call(this, arguments)
         }
-
     }
 }
-let throttleAjax = throttle(ajax, 1000);
+// 可以简化成 flag 来实现
+function throttle(fn, delay) {
+    let timer = null;
+    let flag = true;
+    return function (...args) {
+        if (!flag) {
+            return;
+        }
+        fn.apply(this, args);
+        flag = false;
+        timer = setTimeout(() => {
+            flag = true;
+        }, delay);
+    };
+}
 
+let throttleAjax = throttle(ajax, 1000);
 let input3 = document.getElementById('input3')
 input3.addEventListener('keyup', (e) => {
     throttleAjax(e.target.value);
@@ -140,11 +196,11 @@ input3.addEventListener('keyup', (e) => {
 
 <img src="/../img/assets_2019/image-20210710203800964.png" alt="image-20210710203800964" style="zoom:33%;" />
 
-解决上文外部的 `delay` 时间小于 防抖的 `delay` 时间 - `Junzhe` **函数不会执行** 
+解决上文外部的 `delay` 时间小于 防抖的 `delay` 时间 - `show` **函数不会执行** 
 
 ```js
 // 不管我们设定的执行时间间隔多小，总是1s内只执行一次。
-setInterval(throttle(jun,3000),2000);
+setInterval(throttle(show,3000),2000);
 ```
 
 看一下打印结果：
