LTN：12.10 6个LTN2降到1 + 错题重做

--- a/_posts/浏览器原理相关内容/2019-07-10-h5新标签和语义化，块行内元素.md
+++ b/_posts/浏览器原理相关内容/2019-07-10-h5新标签和语义化，块行内元素.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 浏览器原理 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -76,7 +76,7 @@ typora-root-url: ..
 
 ④ `input`标签的增强
 
-- 新增了许多input **type属性**：`email`、`tel`、『`url`』、`number`、search`搜索框，加强语义、`range`自由拖动滑块、`time`、`date`日期、`datetime`时间、`month`、`week`
+- 新增了许多input **type属性**：`email`、`tel`、『`url`』、`number`、`search`搜索框，加强语义、`range`自由拖动滑块、`time`、`date`日期、`datetime`时间、`month`、`week`
 
 -	新增了许多input的 **属性**：`placeholder`占位符，默认文字、`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、『<u>`required`必填项</u>』、`accesskey`规定激活元素的快捷键、`autocomplete`
 
