--- a/_posts/算法、刷题/2024-12-5-模拟实现promise.md
+++ b/_posts/算法、刷题/2024-12-5-模拟实现promise.md
@@ -26,11 +26,13 @@ typora-root-url: ..
 
 常见错误：
 
-- 1、如果不使用 self，在 resolve和reject定义时使用『箭头函数』保存上下文
+- 1、如果不使用 self，在 resolve和reject定义时使用『箭头函数』保存上下文（保存在this上）
 
 <img src="/../img/assets_2023/image-20241205201152107.png" alt="image-20241205201152107" style="zoom:50%;" />
 
 <img src="/../img/assets_2023/image-20241207115858868.png" alt="image-20241207115858868" style="zoom:40%;" />
+
+<img src="/../img/assets_2023/image-20241214160634119.png" alt="image-20241214160634119" style="zoom:30%;" />
 
 - 2、Promise.resolve - 传入的如果是一个 promise，会把状态和值传递下去
 
@@ -42,9 +44,11 @@ typora-root-url: ..
 
     <img src="/../img/assets_2023/image-20241210123040158.png" alt="image-20241210123040158" style="zoom:35%;" />
 
-- 4、Promise.then() - 为了链式调用返回的新的promise的this === 原本的this（箭头函数）
+- 4、Promise.then() - 为了链式调用返回的新的promise的this === 原本的this（箭头函数） +  pending状态下推入队列的应该是一个可执行的函数
 
     <img src="/../img/assets_2023/image-20241210122822660.png" alt="image-20241210122822660" style="zoom:35%;" />
+
+    <img src="/../img/assets_2023/image-20241214160919480.png" alt="image-20241214160919480" style="zoom:30%;" />
 
 - 5、Promise.finally() - 需要将 value 值传递
 
