LTN：12.18 4个LTN3升到4，3个LTN3降到1

--- a/_posts/css相关内容/2019-07-07-css中的动画特性可以用js实现，那为什么还要用css来实现？.md
+++ b/_posts/css相关内容/2019-07-07-css中的动画特性可以用js实现，那为什么还要用css来实现？.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN3 >
+    - < LTN4 >
 typora-root-url: ..
 ---
 
@@ -30,7 +30,7 @@ typora-root-url: ..
 
 3、**避免回流重绘**：『<u>CSS 动画可以在 **合成线程** 中完成</u>』，而 js 写的动画需要在 **主线程** 执行；CSS 动画只涉及到变换（transform）、透明度（opacity）等属性时，直接在 **合成层** 操作，有效避免了 **回流和重绘** 带来的性能损耗
 
--	补充：渲染进程分为主线程和合成线程
+-	补充：渲染进程分为主线程和合成线程 + 预解析线程
 
 4、**预扫描，加载快**：CSS 可以预扫描下载和解析，无需等待 js 下载就可以开始动画
 
