--- a/_posts/react17+ts4/2022-10-19-TS 基本知识梳理.md
+++ b/_posts/react17+ts4/2022-10-19-TS 基本知识梳理.md
@@ -17,7 +17,48 @@ typora-root-url: ..
 
 # 第四课
 
-除了视频，学习内容还参考了	[RYF的TS教程](https://typescript.p6p.net/typescript-tutorial/generics.html)
+### 实际使用的补充
+
+1、`keyof` 操作符：
+
+- 作用：用于获取一个类型的所有已知属性名，返回的结果是一个联合类型 --> 联合类型中的每个成员就是原始类型中属性的名称（作为字符串字面量类型）
+
+```tsx
+interface Person {
+    name: string;
+    age: number;
+    address: string;
+}
+type PersonKeys = keyof Person; // PersonKeys 就是 "name" | "age" | "address"
+```
+
+2、 `typeof` 操作符
+
+两种主要用法：
+
+- js 中用于获取一个变量的数据类型
+- ts 中用于获取一个值的类型，常用来基于已有值的结构推导类型
+
+```ts
+const myObj = {
+    prop1: "hello",
+    prop2: 10
+};
+type MyObjType = typeof myObj; // MyObjType 被推导为 { prop1: string; prop2: number; } - 和 myObj 对应
+```
+
+3、组合使用 keyof 、 typeof
+
+```tsx
+enum Type {
+    READ = '阅读',
+    STUDY = '前端'
+}
+keyof typeof Type; // 先通过 typeof 获取到 Type 的结构类型，再通过 keyof 获取所有属性名称的联合类型
+key as keyof typeof Type; // as 进行断言(强制类型转换的安全写法)，key 只能是 Type 所有属性名称组成的联合类型其中之一，即 "READ" | "STUDY"
+```
+
+
 
 ### 一、泛型 
 
