LTN：12.18 3个LTN2升到3，5个LTN2降到1

--- a/_posts/JS原生基础相关/2019-07-11-深拷贝和浅拷贝的区别？怎么实现深拷贝？.md
+++ b/_posts/JS原生基础相关/2019-07-11-深拷贝和浅拷贝的区别？怎么实现深拷贝？.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < JS原生基础相关 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -66,6 +66,32 @@ console.log(arr); // [1, 3, {username: 'aQiu'}] 不变
     - ① weakMap 存储的值是对象 - 赋值地址后， `res` 变化-map 中存储的值也变化了
     - ② symbol不能使用 new，创建新的用`Symbol.for(target.description)` 
     - ③ for…in 循环的是 object 的 key 
+
+常见错误：
+
+1、isObject：判断是否为引用类型时，记得考虑 null 边界情况
+
+<img src="/../img/assets_2023/image-20241219160421018.png" alt="image-20241219160421018" style="zoom:30%;" />
+
+2、获取构造函数：constructor
+
+<img src="/../img/assets_2023/image-20241219160620045.png" alt="image-20241219160620045" style="zoom:30%;" />
+
+3、Map类型处理：Map类型使用 forEach ，回调参数(value, key, map)
+
+<img src="/../img/assets_2023/image-20241219161539164.png" alt="image-20241219161539164" style="zoom:30%;" />
+
+- 如果使用 for…of：遍历的是每一个键值对 [‘a’, 1]
+
+    <img src="/../img/assets_2023/image-20241219200224559.png" alt="image-20241219200224559" style="zoom:30%;" />
+
+4、Set 类型处理：Set类型使用 forEach ，回调参数(value, key, set) - **key 始终和value相同**
+
+<img src="/../img/assets_2023/image-20241219161805563.png" alt="image-20241219161805563" style="zoom:30%;" />
+
+- 如果使用 for…of：遍历的是每个值
+
+    <img src="/../img/assets_2023/image-20241219200628020.png" alt="image-20241219200628020" style="zoom:30%;" />
 
 ```js
 // 更周全的深拷贝
