--- a/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
+++ b/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
@@ -8,7 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN2 >
+    - < LTN3 >
 typora-root-url: ..
 ---
 
@@ -49,7 +49,7 @@ typora-root-url: ..
 /* 最简写法 */
 .father::after {
     content:"";
-    display: block; /* 『拥有独立的盒模型 - 块元素单独一行，可能 clear:both 失效』 */
+    display: block; /* 『拥有独立的盒模型 - 块元素单独一行，否则可能会 clear:both 失效』 */
     clear:both; /* 表示块级元素的左右两边都不能有浮动元素 */
 }
 ```
