--- a/_posts/css相关内容/2021-06-26-BFC特点、触发、存在解决的问题.md
+++ b/_posts/css相关内容/2021-06-26-BFC特点、触发、存在解决的问题.md
@@ -9,7 +9,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
-    - < LTN2 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -39,7 +39,7 @@ typora-root-url: ..
 
 - **浮动** (float不为 none）
 - **绝对定位元素** (position: absolute / fixed)
-- **display**： 『<u>inline-block 行内块、table-cell 表格单元格</u>』、table-caption 表格标题、flex 弹性盒子
+- **display**： 『<u>inline-block 行内块、table-cell 表格单元格、table-caption 表格标题</u>』、flex 弹性盒子
 - **overflow 除 visible的值**(overflow: hidden/auto/『<u>scroll</u>』)
 - 『根元素』
 
