LTN：12.18 9个LTN1升到2，4个停留在LTN1

--- a/_posts/算法、刷题/2021-07-11-工作 防抖节流.md
+++ b/_posts/算法、刷题/2021-07-11-工作 防抖节流.md
@@ -51,10 +51,19 @@ typora-root-url: ..
 
 - 节流通常是通过一个 **标记变量和定时器** 来实现，当函数执行后，设置一个定时器，在定时器未结束期间（即未达到规定的时间间隔），再次触发事件时函数不会执行，直到定时器结束，标记变量重置，函数才可以再次执行。
 
+- 常见错误：
+
+    1、不用再清理定时器来处理了，也就不用记录
+    
+    2、setTimeout用来管理 flag的值，即可控制
+    
+    3、第一次是会触发的
+    
+    <img src="/../img/assets_2023/image-20241221145051497.png" alt="image-20241221145051497" style="zoom:30%;" />
+    
     ```js
     // 不是使用计算时间的方式来判断，而是直接使用 flag标记变量
     function throttle(fn, delay) {
-        let timer = null;
         let flag = true;
         return function (...args) {
             if (!flag) {
@@ -62,13 +71,13 @@ typora-root-url: ..
             }
             fn.apply(this, args);
             flag = false;
-            timer = setTimeout(() => {
+            setTimeout(() => {
                 flag = true;
             }, delay);
         };
     }
     ```
-
+    
     
 
 ##### 3、实际应用场景
