--- a/_posts/算法、刷题/2024-12-5-模拟实现promise.md
+++ b/_posts/算法、刷题/2024-12-5-模拟实现promise.md
@@ -34,6 +34,10 @@ typora-root-url: ..
 
 <img src="/../img/assets_2023/image-20241214160634119.png" alt="image-20241214160634119" style="zoom:30%;" />
 
+定义时注意！promise 的状态改变后不可逆！一定要判断当前状态是 pending 才能切换！！
+
+<img src="/../img/assets_2023/image-20241221200031090.png" alt="image-20241221200031090" style="zoom:30%;" />
+
 - 2、Promise.resolve - 传入的如果是一个 promise，会把状态和值传递下去
 
     <img src="/../img/image-20241207115957175.png" alt="image-20241207115957175" style="zoom:30%;" />
@@ -53,6 +57,10 @@ typora-root-url: ..
 - 5、Promise.finally() - 需要将 value 值传递
 
     <img src="/../img/assets_2023/image-20241210122803383.png" alt="image-20241210122803383" style="zoom:35%;" />
+    
+- 6、Promise.all() - 记得要给 then传递两个函数作为参数 + pre在reduce主体函数中返回
+
+    <img src="/../img/assets_2023/image-20241221195842755.png" alt="image-20241221195842755" style="zoom:30%;" />
 
 ```js
 let Status = {
