--- a/_posts/算法、刷题/2024-12-7-模拟实现jsonp.md
+++ b/_posts/算法、刷题/2024-12-7-模拟实现jsonp.md
@@ -22,9 +22,17 @@ typora-root-url: ..
 
     <img src="/../../30ReactReact/image-20241209213826937.png" alt="image-20241209213826937" style="zoom:30%;" />
 
+    移除实在 document.body 上移除的，直接在 document 调用会提示错误
+
+    <img src="/../img/assets_2023/image-20241221155159923.png" alt="image-20241221155159923" style="zoom:30%;" />
+
 - 2、判断是否有 ? 时，一定要注意 indexOf 和 includes
 
     <img src="/../../30ReactReact/image-20241209213700272.png" alt="image-20241209213700272" style="zoom:30%;" />
+
+    +（加法运算符）的优先级要高于? :（三元条件运算符）
+
+    <img src="/../img/assets_2023/image-20241221160221608.png" alt="image-20241221160221608" style="zoom:30%;" />
 
 ```js
 function jsonp({ url, params, callback }) {
