Vue和React相关知识梳理，整理到 LTN1 盒子

--- a/_posts/react17+ts4/2023-11-05-React设计原理 Part 1 理念篇.md
+++ b/_posts/react17+ts4/2023-11-05-React设计原理 Part 1 理念篇.md
@@ -22,35 +22,31 @@ typora-root-url: ..
 
 > 前端框架原理
 
-1.1、当前主流的两种描述 UI 的方案
+1.1、当前主流的两种描述 UI 的方案 - JSX(React)+模版语法(Vue)
 
-1.2、如何组织UI和逻辑
+1.2、如何组织UI和逻辑 - 注意副作用
 
-1.3、如何在组件间传递数据
+1.3、如何在组件间传递数据 - state+props
 
-1.4、前端框架分类依据
+1.4、前端框架分类依据 - 编程范式：(1、MV模式-MVVM/MVC-Vue/Angular + 2、函数式编程-React) + 应用类型（1、SPA 单页-Vue/React/Angular + 2、多页-一些基于服务端渲染SSR的框架-Next.js/Nuxt.js）
 
-1.5、AOT-预编译
+1.5、AOT-预编译 - 预编译(JSX中收益少-ES灵活，难以解析，模版语法-收益高) + 即时编译
 
-1.6、Virtual DOM
+1.6、Virtual DOM - （1、React Element + fiber 2、Vue render + patch）
 
 1.7、前端框架的实现原理（总结 table）
 
 > React概念
 
-2.1、React 重运行时，是如何实现快速响应的？
+2.1、React 重运行时，是如何实现快速响应的？-？
 
-2.2、瓶颈解决方案
+2.2、瓶颈解决方案 -？
 
-2.3、为什么使用新架构？原理？
+2.3、为什么使用新架构？原理？ -fiber-？
 
 2.4、React 迭代历史
 
 2.5、Fiber详细介绍
-
-
-
-
 
 
 
@@ -77,9 +73,9 @@ typora-root-url: ..
 - 方式2：自变量变化，导致“无副作用”的因变量变化，进而 UI 变化
 - 方式3：自变量变化，导致“有副作用”的因变量变化，产生副作用
 
-<span style="background-color: #eee"><span style="color:red">副作用</span>定义：函数调用过程中掺杂的外部可观察的变化</span> - 是函数式编程的概念
+<span style="background-color: #eee"><span style="color:red">副作用</span>定义：函数调用过程中掺杂的外部可观察的变化 - 函数除了返回值之外，还对外部环境（如修改全局变量、改变输入参数、进行 I/O 操作等）产生了影响	</span> - 是函数式编程的概念
 
-​	
+
 
 #### 1.3 如何在组件间传递数据
 
@@ -103,7 +99,7 @@ useState：定义组件内部的自变量
 
 useReducer：UseState本质是内置 render 的 useReducer，useReducer 也相当于组件内部定义的自变量
 
-useContext：是 React 中 store 的实现，用于跨层级讲其他组件的自变量传递给当前组件
+useContext：是 React 中 store 的实现，用于跨层级将其他组件的自变量传递给当前组件
 
 useMemo：采用“缓存的方式”定义组件内部的“无副作用因变量”
 
@@ -154,6 +150,8 @@ React：React 使用 JSX 描述 UI，<span style="color:red">JSX 编译为 creat
 - 第一步：createElement 执行后 **返回 React Element 描述的 UI**
 - 第二步：将**变化后 React Element 描述的 UI** 和**变化前 FiberNode 描述的 UI** 进行比较，计算出变化的部分，生成此次更新 - FiberNode 描述的UI
 
+
+
 #### 1.7 前端框架的实现原理
 
 <img src="/../img/assets_2023/FC310B50-5005-44B2-A32E-B2C574328BB5.png" alt="FC310B50-5005-44B2-A32E-B2C574328BB5" style="zoom:28%;" />
@@ -174,17 +172,11 @@ React：React 使用 JSX 描述 UI，<span style="color:red">JSX 编译为 creat
 
 带着问题来阅读，本章疑问：<span style="color:red">1、为什么React16要使用fiber重构？有什么优点？</span>
 
-解答：重构的原因主要是旧架构无法实现 Time Slice
+解答： 
 
-那为什么要实现 **时间切片**？是因为前端当前有两大瓶颈：
+​	之前更新的过程是 **同步渲染** 的，且组件更新时， React会递归构建整个DOM树->再进行差异比较->最后更新真实DOM，大型应用或复杂场景会出现性能问题。
 
-- CPU瓶颈（根本原因是，渲染流水线和js执行同时作为宏任务，如果js执行时间过长，渲染流水线图片绘制低于60帧-屏幕刷新率，就会掉帧、卡顿）
-- I/O 瓶颈（虽然下载速度无法控制，但是 React 希望通过划分优先级，和统一调度来优化，该方案的核心需要可中断更新，即时间切片）
-
-React 在运行时将 VDOM 的执行过程拆分成一个一个独立宏任务，每个宏任务执行时间限制在一定范围内。
-
-- CPU瓶颈 - 通过将一个长宏任务，拆解成多个短宏任务，不影响渲染流水线
-- I/O瓶颈 - 实现可中断更新，在一个短宏任务完成前，下一个短宏任务开始前，检查是否应该中断
+​	重构的原因主要是旧架构无法实现 Time Slice【时间切片】 - **异步渲染**  - 渲染工作被拆分成很多小的任务单元，可被中断恢复，在浏览器有空闲时间时执行渲染任务，而不是一次性占用大量的主线程时间。（且 fiber 提供了**优先级调度** - 类似用户交互触发的渲染优先级高，先优先处理渲染）
 
 <span style="color:red">2、fiber 是怎么实现的？</span>
 
@@ -256,7 +248,7 @@ React 在v18 中不再提供多种开发模式，而是以 “是否使用并发
 React 中的三种节点
 
 - React Element（React 元素）
-- React Component（React 组件）- 函数、class类
+- React Component（React 组件）- 函数组件、class类组件
 - FiberNode（Fiber 架构的节点）- 多个属性用于表示各种信息
     - alternate - 指向“另一个缓冲区中对应的 FiberNode”
 
@@ -280,11 +272,13 @@ mount 时 Fiber Tree 的构建
 - step3：从 HostRootFiber 开始，以 DFS 的顺序生成 FiberNode
 - step4：在遍历过程中，为 FiberNode 标记 effectTag 表示不同副作用
 
-当 WIP FiberTree 生成完毕，FiberRootNode会被传递给 Renderer-commit阶段（执行 side-effects-list【在18改为 flags】）;
+当 WIP FiberTree 生成完毕，FiberRootNode会被传递给 Render-commit阶段（执行 side-effects-list【在18改为 flags】）;
 
 Renerder-commit 完成工作后，WIP FiberTree 已经渲染到宿主环境中，FiberRootNode.current 切换指向 WIP
 
 <img src="/../img/assets_2023/19FFA6ED-4CC8-435D-AAAD-EEE47AD5D66E.png" alt="19FFA6ED-4CC8-435D-AAAD-EEE47AD5D66E" style="zoom:33%;" />
+
+
 
 补充知识点说明：
 
