--- a/_posts/react17+ts4/2023-11-05-React设计原理 Part 2 架构篇.md
+++ b/_posts/react17+ts4/2023-11-05-React设计原理 Part 2 架构篇.md
@@ -28,7 +28,9 @@ typora-root-url: ..
 
 > commit 阶段
 
-2.1、
+2.1、将各种副作用 commit 到宿主环境 UI 中
+
+2.2、错误处理
 
 
 
@@ -38,22 +40,24 @@ typora-root-url: ..
 
 解答：主要分为两个阶段，分别为 render阶段和commit 阶段。
 
-render 阶段：
+render 阶段【异步执行】 - WIP FiberTree：
 
 - 先从 HostRootFiber 向下 DFS 遍历，执行 beiginWork
     - **beginWork** ：根据 wip.tag 进入不同类型元素处理，生成下一级的 fiberNode - 即子节点，并标记副作用 flags（删除 ChildDeletion/新增、移动Placement）
 - 再遍历到叶子节点时，调用 completeWork 处理 fiberNode
     - **completeWork**：创建或标记元素更新，构建出 tree；同时 flags 冒泡/收集 EffectList 单向链表
 
-commit 阶段：
+commit 阶段【同步执行】 - 将各种副作用 commit 到宿主环境 UI 中：
 
-todo【待补充】
+-	当 WIP FiberTree 生成完毕，FiberRootNode会被传递给 Render渲染器 -commit阶段，执行 side-effects-list链表【在18改为 flags/subtreeFlags】
+
+-	Renerder-commit 完成工作后，WIP FiberTree 已经渲染到宿主环境中，FiberRootNode.current 切换指向 WIP
 
 
 
 <span style="color:red">2、React 如何处理异常？</span>
 
-解答：详见2.3
+解答：错误边界(两个API)，详见 2.3
 
 
 
@@ -61,7 +65,7 @@ todo【待补充】
 
 > React 18 中的并发功能，在 render 中使用 shouldYield判断是否可中断，其他逻辑和17的 render 一致
 
-![21A264BD-37C5-4F41-B7CE-47366A77FC44](/../img/assets_2023/21A264BD-37C5-4F41-B7CE-47366A77FC44.png)
+![render1](/../img/assets_2023/render1.png)
 
 render 阶段的主要流程
 
@@ -86,7 +90,9 @@ render 阶段的主要流程
 
 简易流程图如下：
 
-<img src="/../img/assets_2023/8FF73452-E006-4725-8FF4-2C32E14FB692.webp" alt="8FF73452-E006-4725-8FF4-2C32E14FB692" style="zoom:93%;" />
+![render1](/../img/assets_2023/render1.png)
+
+<img src="/../img/assets_2023/render2.png" alt="render2" style="zoom:60%;" />
 
 #### 1.2 completeWork
 
@@ -104,7 +110,9 @@ render 阶段的主要流程
 
 简易流程图如下：
 
-<img src="/../img/assets_2023/61671B77-2873-4B68-B3EB-D1F70A160F1F.webp" alt="61671B77-2873-4B68-B3EB-D1F70A160F1F" style="zoom:37%;" />
+<img src="/../img/assets_2023/render3.png" alt="render3" style="zoom:40%;" />
+
+
 
 ## commit 阶段
 
@@ -126,7 +134,9 @@ commit 阶段（Renderer工作的阶段 -  <span style="background-color: yellow
 
 每一个阶段都以 DFS遍历，直到叶子节点或者无 flags 的节点，再向上遍历到 HostRootFiber，在遍历构成中执行 flags 对应的操作
 
-<img src="/../img/assets_2023/FC79BECF-6FE7-4076-B5D6-C7F3ED2402CC.png" alt="FC79BECF-6FE7-4076-B5D6-C7F3ED2402CC" style="zoom:45%;" />
+<img src="/../img/assets_2023/commit1.png" alt="commit1" style="zoom:30%;" />
+
+
 
 
 
@@ -154,6 +164,12 @@ React 提供了两个错误处理相关的 API
 - 构造 callback
 - 执行 callback
 
+<img src="/../img/assets_2023/commit2.png" alt="commit2" style="zoom:50%;" />
 
+不会被捕获的四种错误：
 
-<img src="/../img/assets_2023/3D5A984E-2FD1-4671-8D78-870B90336480.png" alt="3D5A984E-2FD1-4671-8D78-870B90336480" style="zoom:50%;" />
+- 事件回调中的错误（不属于 react 工作流，且 错误处理 API 被设计的目的是避免错误发生导致 UI 显示不完全 - **只有 commit阶段的Mutation阶段会造成 UI 变化**）
+- 异步代码（不属于 react 工作流，例如 setTimeout）
+- SSR（不属于 react 工作流）
+- 在 Error Boundaries 所属 Component 内发生的错误
+
